# GPT-Haskell

./: .gitignore  README.md  gpt.cabal
src/: Encoder.hs  Main.hs  Model.hs  Tokenizer.hs
test/: Specs.hs
