cabal-version:       3.0

name:                gpt
version:             0.1.0.0
-- synopsis:
-- description:


author:              milton
build-type:          Simple
extra-source-files:  README.md




-- common warnings
--     ghc-options: -Wall

executable src
    -- Import common warning flags.
    -- import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base >= 4.7 && < 5


    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

library
  exposed-modules:     Tokenizer, Model
  hs-source-dirs:      src
  build-depends:    base
                      , vector
                      , bytestring
                      , containers
                      , text
                      , regex-tdfa
                      , mtl
                      , aeson
                      , filepath
                      , hmatrix
                      , conduit
                      , conduit-extra
                      , directory
                      , http-conduit
  default-language:    Haskell2010


test-suite test-encoder
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Specs.hs
  build-depends:    base >= 4.7 && < 5
                      , gpt
                      , vector
                      , bytestring
                      , containers
                      , text
                      , regex-tdfa
                      , mtl
                      , aeson
                      , filepath
                      , hmatrix
                      , conduit
                      , conduit-extra
                      , directory
                      , http-conduit
                      , hspec
                      , QuickCheck
  default-language:    Haskell2010

